# pytorch-template

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  nohup.out  pyproject.toml
conf/: config.yaml  test.yaml
conf/dataset/: cifar10.yaml  dcase2018task5.yaml  mnist.yaml
conf/lr_scheduler/: donothing.yaml  multi_step.yaml
conf/model/: baseline_cnn.yaml  blinky_vgg1d.yaml  multi_blinky_vgg1d.yaml  multi_encoder_vgg1d.yaml  multi_unet_vgg1d.yaml  multi_vgg1d.yaml  multi_vgg2d.yaml  simple_cnn.yaml  unet_vgg1d.yaml  vgg1d.yaml  vgg2d.yaml
conf/optimizer/: adam.yaml  sgd.yaml
docker/: Dockerfile  Makefile  docker-compose.gpu.yml  docker-compose.rootful.yml  docker-compose.yml  docker-compose.yml.example  entrypoint.sh  env.example  run_jupyter.sh  to
docker/cpu/: docker-compose.yml
docker/gpu/: docker-compose.yml
docker/hdrnet/: Dockerfile~
docker/jupyter/: jupyter_notebook_config.py
docker/jupyter/.jupyter/: migrated
docker/jupyter/.local/share/jupyter/runtime/: notebook_cookie_secret
docker/rootful/: Dockerfile
docker/rootful/cpu/: docker-compose.yml
docker/rootful/gpu/: docker-compose.yml
docker/rootless/: Dockerfile  run_jupyter.sh
docker/rootless/cpu/: docker-compose.yml
docker/rootless/gpu/: docker-compose.yml
docker/rootless/rootful/cpu/: docker-compose.yml
docker/utils/: #docker.sh#  docker.sh  dockremap14.sh  dockremap16.sh
docs/: conf.py  index.rst
notebooks/: sample.ipynb
outputs/train/history/198f40f950/: config.yaml
outputs/train/history/241eb3c59e/: config.yaml
outputs/train/history/2986b76d6f/: config.yaml
outputs/train/history/453f73c805/: config.yaml
outputs/train/history/5fa904c0fd/: config.yaml
outputs/train/history/b67d6196f1/: config.yaml
scripts/: data_statistics.py  installation_verification.py  test.py  train.py
src/: data_pipeline.py  dataset.py  extension.py  installation_verification.py  model.py  preprocess.py  pretrain.py  test.py  train.py  train_id.py  trainer.py  transform.py  util.py
src/pytorch_template/: __init__.py  dataset.py  extension.py  train_id.py  trainer.py
