[project]
name = "pytorch-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ykino", email = "y.kinoshita.research@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "torchinfo>=1.8.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
cpu   = ["torch>=2.6.0", "torchvision>=0.21.0", "torchaudio>=2.6.0"]
cu124 = ["torch>=2.6.0", "torchvision>=0.21.0", "torchaudio>=2.6.0"]
cu128 = ["torch>=2.6.0", "torchvision>=0.21.0", "torchaudio>=2.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/pytorch_template"]

[tool.uv]
conflicts = [
  [ { extra = "cpu" }, { extra = "cu124" }, { extra = "cu128"} ] # 同時指定を禁止
]

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true # torch 系以外には使わせない

[[tool.uv.index]]
name     = "pytorch-cu124"
url      = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",   extra = "cpu"   },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" }
]
torchvision = [
  { index = "pytorch-cpu",   extra = "cpu"   },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" }
]
torchaudio = [
  { index = "pytorch-cpu",   extra = "cpu"   },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" }
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
]

